# HIJING_FXT

./: .hijing_config.toml.swp  CMakeLists.txt  README.txt  hepmcToRoot.cxx  hijing1.420.f  hijingHep.cxx  hijingHepROOT.cxx  hijing_config.txt  hijingcpp.cxx  hipyset1.37zv.f  test.f  test.in
analysis/: PvsEta.C  epic_acceptances.C  hijTree.C  hijTree.h  make_rap_plots.sh  phase_space_trans.C  plot_rapidity.C  yields.C  yields_C.C  yields_C_10p5GeV.txt  yields_C_11p5GeV.txt  yields_C_13p7GeV.txt  yields_FXT.C  yields_FXT_10p5GeV.txt  yields_FXT_10p5GeV_100k.txt  yields_FXT_11p5GeV.txt  yields_FXT_11p5GeV_100k.txt  yields_FXT_13p7GeV.txt  yields_FXT_13p7GeV_100k.txt
analysis/epicAcceptances/piK/: ToF_HRPPD.txt  ToF_mid.txt  ToF_right.txt  dRICH_aerogel.txt  dRICH_gas.txt  hpDIRC.txt  pfRICH.txt
analysis/legacy/: PvsEta.C~  epic_acceptances.C~  plot_hijing.C  pm_ratios.C  yields_C_11p5GeV.txt  yields_C_13p7GeV.txt  yields_C_19p6GeV.txt  yields_C_27GeV.txt  yields_C_39GeV.txt  yields_FXT_11p5GeV.txt  yields_FXT_13p7GeV.txt  yields_FXT_19p6GeV.txt  yields_FXT_27GeV.txt  yields_FXT_39GeV.txt
